fixed policy graph overlap

--- a/frontend/src/Components/policy.css
+++ b/frontend/src/Components/policy.css
@@ -1,38 +1,70 @@
 .policy-summary {
-    margin: 20px;
-    padding: 10px;
+    margin: 5px;
     color: white;
+    height: 25vh;
+    overflow-y: auto; 
   }
   
   .policy-item {
-    margin-bottom: 15px;
-    padding: 10px;
-    border-bottom: 1px solid #eee;
+    margin-bottom: 5px;
   }
   
   .policy-item:last-child {
     border-bottom: none;
   }
+
+  .policy-summary h2 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #ffffff;
+    text-decoration: underline;
+    overflow-y: auto;
+  }
   
   .policy-item h3 {
     margin: 0;
-    font-size: 1.2em;
+    font-size: 1em;
     color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
   }
   
   .policy-item p {
     margin: 5px 0;
+    font-size: 14px;
   }
   
   .cross {
     color: red;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1.5em;
     transition: color 0.3s ease;
+    align-self: center;
     border-color: red;
+    padding-left: 5px;
   }
   
   .cross:hover {
     color: white;
     background-color: darkred;
   }
+
+.policy-summary::-webkit-scrollbar-track {
+  background-color: #494949; 
+  border-radius: 10px; }
+
+.policy-summary::-webkit-scrollbar-thumb {
+  background-color: #9a9a9a; 
+  border-radius: 10px; 
+  border: 3px solid #494949;
+}
+
+.policy-summary::-webkit-scrollbar {
+  width: 8px; 
+}
+
+.policy-summary::-webkit-scrollbar-thumb:hover {
+  background-color: #d1d1d1;
+}
